<resources>
  <string name="app_name">Drills</string>
  <string name="dialog_action_ok">OK</string>
  <string name="dialog_error_title">Ошибка</string>
  <string name="title_activity_start">Салон</string>

  <string name="navigation_drawer_open">Open navigation drawer</string>
  <string name="navigation_drawer_close">Close navigation drawer</string>

  <string name="action_settings">Settings</string>
  <string name="shooters_global">SHOOTERS.GLOBAL</string>
  <string name="drills_application">DRILLS APPLICATION</string>
  <string name="enter_password">Введите пароль</string>
  <string name="create_account">Создать аккаунт</string>
  <string name="login">Вход</string>
  <string name="enter_email_password">Введите Email или телефонный номер</string>
  <string name="help">Помошь?</string>
  <string name="reset">Восстановить</string>
  <string name="reset_hint">Телефон или Email для восстановления</string>
  <string name="cancel">Отмена</string>
  <string name="registration">Зарегестрироваться</string>
  <string name="attention">Уведомление</string>
  <string name="registration_dialog_content">Мы отправили вам SMS c вашим паролем</string>

  <!-- TODO: Remove or change this placeholder text -->
  <string name="hello_blank_fragment">Hello blank fragment</string>
  <string name="done">Готово</string>
  <string name="holoshenie">Холощение</string>
  <string name="create">Создать</string>
  <string name="history">История</string>
  <string name="change">Изменить</string>
  <string name="all_time">Все время</string>
  <string name="set_time">Время сэта (секунды)</string>
  <string name="delay">Задержка (секунды)</string>
  <string name="between_sets">Между сэтами (секунды)</string>
  <string name="comments">Место для описания</string>
  <string name="back">Назад</string>
  <string name="start">Старт</string>
  <string name="stop">Стоп</string>
  <string name="repeats">Повторы:</string>
  <string name="save">Сохранить</string>
  <string name="sets">Сеты</string>
  <string name="dell_all">Удалить все</string>
  <string name="dell">Удалить </string>
  <string name="synchronization">Синхронизация</string>
  <string name="logout">Выход</string>
  <string name="total_time">Все время</string>
  <string name="not_correct_log_pas">Пароль или логин введены неверно</string>
  <string name="fail_format_of_inputted_field">Телефон или email введены в неверном формате</string>
  <string name="wrong_delay_data">Задержка должна быть больше или равно 3 секунд</string>
</resources>
