<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
  <ImageView
      android:id="@+id/imageView"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="24dp"
      android:background="@drawable/ic_logo"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      />
  <TextView
      android:id="@+id/textView"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginEnd="8dp"
      android:layout_marginLeft="8dp"
      android:layout_marginRight="8dp"
      android:layout_marginStart="8dp"
      android:layout_marginTop="16dp"
      android:text="@string/shooters_global"
      android:textColor="@color/colorAccent"
      android:textSize="19sp"
      android:textStyle="bold"
      app:layout_constraintLeft_toLeftOf="@+id/imageView"
      app:layout_constraintRight_toRightOf="@+id/imageView"
      app:layout_constraintTop_toBottomOf="@+id/imageView"
      />
  <TextView
      android:id="@+id/textView2"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginEnd="8dp"
      android:layout_marginLeft="8dp"
      android:layout_marginRight="8dp"
      android:layout_marginStart="8dp"
      android:text="@string/drills_application"
      android:textColor="@color/colorAccent"
      android:textSize="15sp"
      app:layout_constraintLeft_toLeftOf="@+id/imageView"
      app:layout_constraintRight_toRightOf="@+id/imageView"
      app:layout_constraintTop_toBottomOf="@+id/textView"
      />
  <EditText
      android:id="@+id/editText"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginBottom="8dp"
      android:ems="10"
      android:hint="@string/enter_password"
      android:inputType="textPassword"
      android:textColor="@color/white"
      android:textColorHint="@color/gray"
      android:textSize="16sp"
      app:layout_constraintBottom_toTopOf="@+id/button"
      app:layout_constraintLeft_toLeftOf="@+id/button"
      app:layout_constraintRight_toRightOf="@+id/button"
      />
  <TextView
      android:id="@+id/textView4"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginBottom="16dp"
      android:layout_marginEnd="8dp"
      android:layout_marginLeft="8dp"
      android:layout_marginRight="8dp"
      android:layout_marginStart="8dp"
      android:text="@string/create_account"
      android:textColor="@color/white"
      android:textSize="18sp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      />
  <Button
      android:id="@+id/button"
      android:layout_width="0dp"
      android:layout_height="50dp"
      android:layout_marginBottom="16dp"
      android:layout_marginEnd="16dp"
      android:layout_marginLeft="16dp"
      android:layout_marginRight="16dp"
      android:layout_marginStart="16dp"
      android:background="@drawable/rounded_rectangle"
      android:text="@string/login"
      android:textSize="19sp"
      app:layout_constraintBottom_toTopOf="@+id/textView4"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      />
  <EditText
      android:id="@+id/editText2"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginBottom="8dp"
      android:ems="10"
      android:hint="@string/enter_email_password"
      android:inputType="textPersonName"
      android:textColor="@color/white"
      android:textColorHint="@color/gray"
      android:textSize="16sp"
      app:layout_constraintBottom_toTopOf="@+id/editText"
      app:layout_constraintLeft_toLeftOf="@+id/editText"
      app:layout_constraintRight_toRightOf="@+id/editText"
      />
  <TextView
      android:id="@+id/textView5"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginBottom="8dp"
      android:layout_marginEnd="8dp"
      android:layout_marginRight="8dp"
      android:layout_marginTop="8dp"
      android:text="@string/help"
      android:textColor="@color/gray"
      android:textSize="16sp"
      app:layout_constraintBottom_toBottomOf="@+id/editText"
      app:layout_constraintRight_toRightOf="@+id/editText"
      app:layout_constraintTop_toTopOf="@+id/editText"
      />
</android.support.constraint.ConstraintLayout>