<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/clParent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

  <com.yqritc.scalablevideoview.ScalableVideoView
      android:id="@+id/evpVideo"
      android:layout_width="0dp"
      android:layout_height="0dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:scalableType="centerCrop"
      />

  <View
      android:id="@+id/view"
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:background="#9d404040"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      />

  <ImageView
      android:id="@+id/ivLogo"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="24dp"
      android:background="@drawable/ic_logo"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      />
  <TextView
      android:id="@+id/tvTitle1"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginEnd="8dp"
      android:layout_marginLeft="8dp"
      android:layout_marginRight="8dp"
      android:layout_marginStart="8dp"
      android:layout_marginTop="16dp"
      android:text="@string/shooters_global"
      android:textColor="@color/colorAccent"
      android:textSize="19sp"
      android:textStyle="bold"
      app:layout_constraintLeft_toLeftOf="@+id/ivLogo"
      app:layout_constraintRight_toRightOf="@+id/ivLogo"
      app:layout_constraintTop_toBottomOf="@+id/ivLogo"
      />
  <TextView
      android:id="@+id/tvTitle2"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginEnd="8dp"
      android:layout_marginLeft="8dp"
      android:layout_marginRight="8dp"
      android:layout_marginStart="8dp"
      android:text="@string/drills_application"
      android:textColor="@color/colorAccent"
      android:textSize="15sp"
      app:layout_constraintLeft_toLeftOf="@+id/ivLogo"
      app:layout_constraintRight_toRightOf="@+id/ivLogo"
      app:layout_constraintTop_toBottomOf="@+id/tvTitle1"
      />
  <TextView
      android:id="@+id/tvCancel"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginBottom="16dp"
      android:layout_marginEnd="8dp"
      android:layout_marginLeft="8dp"
      android:layout_marginRight="8dp"
      android:layout_marginStart="8dp"
      android:text="@string/cancel"
      android:textColor="@color/white"
      android:textSize="18sp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      />
  <Button
      android:id="@+id/bRegistration"
      android:layout_width="0dp"
      android:layout_height="50dp"
      android:layout_marginBottom="16dp"
      android:layout_marginEnd="16dp"
      android:layout_marginLeft="16dp"
      android:layout_marginRight="16dp"
      android:layout_marginStart="16dp"
      android:background="@drawable/rounded_rectangle"
      android:text="@string/registration"
      android:textSize="19sp"
      app:layout_constraintBottom_toTopOf="@+id/tvCancel"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      />
  <EditText
      android:id="@+id/etPhoneEmail"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginBottom="16dp"
      android:layout_marginLeft="16dp"
      android:layout_marginRight="16dp"
      android:ems="10"
      android:hint="@string/enter_email_password"
      android:inputType="textPersonName"
      android:textColor="@color/white"
      android:textColorHint="@color/gray"
      android:textSize="16sp"
      app:layout_constraintBottom_toTopOf="@+id/bRegistration"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      />

</android.support.constraint.ConstraintLayout>