<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_gray"
    android:clickable="true"
    tools:context="com.udtech.drills.feature.holoshenie.fragments.HoloshenieFragment"
    >

  <View
      android:id="@+id/view2"
      android:layout_width="0dp"
      android:layout_height="60dp"
      android:background="@color/colorAccent"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      />
  <TextView
      android:id="@+id/tvDoneDelete"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginBottom="8dp"
      android:layout_marginLeft="8dp"
      android:layout_marginStart="8dp"
      android:layout_marginTop="8dp"
      android:text="@string/done"
      android:textSize="18sp"
      app:layout_constraintBottom_toBottomOf="@+id/view2"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintTop_toTopOf="@+id/view2"
      />
  <TextView
      android:id="@+id/tvOtmenaIzmenit"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginEnd="8dp"
      android:layout_marginRight="8dp"
      android:text="@string/change"
      app:layout_constraintBottom_toBottomOf="@+id/view2"
      app:layout_constraintRight_toRightOf="@+id/view2"
      app:layout_constraintTop_toTopOf="@+id/view2"
      />
  <TextView
      android:id="@+id/textView3"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/history"
      android:textSize="18sp"
      app:layout_constraintBottom_toBottomOf="@+id/view2"
      app:layout_constraintTop_toTopOf="@+id/view2"
      app:layout_constraintVertical_bias="0.526"
      android:layout_marginRight="8dp"
      app:layout_constraintRight_toRightOf="parent"
      android:layout_marginLeft="8dp"
      app:layout_constraintLeft_toLeftOf="parent"
      />
  <android.support.v7.widget.RecyclerView
      android:id="@+id/rvHistory"
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:layout_marginBottom="8dp"
      android:layout_marginLeft="0dp"
      android:layout_marginRight="0dp"
      android:layout_marginTop="0dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/view2"
      />

</android.support.constraint.ConstraintLayout>
