<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_gray"
    android:clickable="true"
    >

  <View
      android:id="@+id/view2"
      android:layout_width="0dp"
      android:layout_height="60dp"
      android:background="@color/colorAccent"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      />
  <TextView
      android:id="@+id/tvCancel"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginBottom="8dp"
      android:layout_marginLeft="8dp"
      android:layout_marginStart="8dp"
      android:layout_marginTop="8dp"
      android:text="@string/cancel"
      app:layout_constraintBottom_toBottomOf="@+id/view2"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintTop_toTopOf="@+id/view2"
      />
  <TextView
      android:id="@+id/tvSave"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginEnd="8dp"
      android:layout_marginRight="8dp"
      android:text="@string/save"
      app:layout_constraintBottom_toBottomOf="@+id/view2"
      app:layout_constraintRight_toRightOf="@+id/view2"
      app:layout_constraintTop_toTopOf="@+id/view2"
      />
  <EditText
      android:id="@+id/etPracticName"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginEnd="8dp"
      android:layout_marginLeft="8dp"
      android:layout_marginRight="8dp"
      android:layout_marginStart="8dp"
      android:layout_marginTop="8dp"
      android:backgroundTint="@color/white"
      android:ems="10"
      android:hint="Practic Name"
      android:inputType="textPersonName"
      android:textColor="@color/white"
      android:textColorHint="@color/text_color"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/view2"
      />
  <TextView
      android:id="@+id/textView"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginLeft="8dp"
      android:layout_marginStart="8dp"
      android:layout_marginTop="24dp"
      android:text="@string/set_time"
      android:textColor="@color/text_color"
      android:textSize="16sp"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/etPracticName"
      />
  <EditText
      android:id="@+id/etSetTime"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginEnd="48dp"
      android:layout_marginRight="48dp"
      android:backgroundTint="@color/white"
      android:ems="4"
      android:gravity="center"
      android:inputType="time"
      android:text="3"
      android:textColor="@color/white"
      android:textSize="24sp"
      app:layout_constraintBaseline_toBaselineOf="@+id/textView"
      app:layout_constraintRight_toRightOf="parent"
      />
  <EditText
      android:id="@+id/etDelay"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginEnd="48dp"
      android:layout_marginRight="48dp"
      android:backgroundTint="@color/white"
      android:ems="4"
      android:gravity="center"
      android:inputType="time"
      android:text="3"
      android:textColor="@color/white"
      android:textSize="24sp"
      app:layout_constraintBaseline_toBaselineOf="@+id/textView2"
      app:layout_constraintRight_toRightOf="parent"
      />
  <TextView
      android:id="@+id/textView2"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginLeft="8dp"
      android:layout_marginStart="8dp"
      android:layout_marginTop="32dp"
      android:text="@string/delay"
      android:textColor="@color/text_color"
      android:textSize="16sp"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textView"
      />
  <CheckBox
      android:id="@+id/cbRandDelay"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginBottom="8dp"
      android:layout_marginEnd="7dp"
      android:layout_marginRight="7dp"
      android:layout_marginTop="8dp"
      android:button="@drawable/check_box_selector"
      app:layout_constraintBottom_toBottomOf="@+id/etDelay"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toTopOf="@+id/etDelay"
      />
  <TextView
      android:id="@+id/textView6"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginLeft="8dp"
      android:layout_marginStart="8dp"
      android:layout_marginTop="32dp"
      android:text="@string/between_sets"
      android:textColor="@color/text_color"
      android:textSize="16sp"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textView2"
      />
  <EditText
      android:id="@+id/etBetweenSets"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginEnd="48dp"
      android:layout_marginRight="48dp"
      android:backgroundTint="@color/white"
      android:ems="4"
      android:gravity="center"
      android:inputType="time"
      android:text="3"
      android:textColor="@color/white"
      android:textSize="24sp"
      app:layout_constraintBaseline_toBaselineOf="@+id/textView6"
      app:layout_constraintRight_toRightOf="parent"
      />
  <CheckBox
      android:id="@+id/cbRandBetweenSets"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginBottom="8dp"
      android:layout_marginEnd="8dp"
      android:layout_marginRight="8dp"
      android:layout_marginTop="8dp"
      android:button="@drawable/check_box_selector"
      app:layout_constraintBottom_toBottomOf="@+id/etBetweenSets"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toTopOf="@+id/etBetweenSets"
      />
  <EditText
      android:id="@+id/etComments"
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:layout_marginBottom="8dp"
      android:layout_marginEnd="8dp"
      android:layout_marginLeft="8dp"
      android:layout_marginRight="8dp"
      android:layout_marginStart="8dp"
      android:layout_marginTop="8dp"
      android:background="@drawable/border"
      android:backgroundTint="@color/white"
      android:inputType="textCapSentences|textMultiLine"
      android:ems="10"
      android:gravity="start"
      android:hint="@string/comments"
      android:textColor="@color/white"
      android:textColorHint="@color/text_color"
      android:textSize="16sp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/etBetweenSets"
      />

</android.support.constraint.ConstraintLayout>