<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="3dp"
    android:background="@color/gray"
    >

  <TextView
      android:id="@+id/textView5"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginLeft="16dp"
      android:layout_marginTop="8dp"
      android:text="@string/holoshenie"
      android:textColor="@color/text_color"
      android:textSize="16sp"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      />
  <TextView
      android:id="@+id/tvStartPracticsTime"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginRight="16dp"
      android:layout_marginTop="8dp"
      android:text="tvStartPracticsTime"
      android:textColor="@color/text_color"
      android:textSize="16sp"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      />
  <TextView
      android:id="@+id/tvGroupName"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginLeft="16dp"
      android:layout_marginTop="16dp"
      android:text="tvGroupName"
      android:textColor="@color/white"
      android:textSize="18sp"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textView5"
      />
  <TextView
      android:id="@+id/tvSetsCountInGroup"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginLeft="16dp"
      android:layout_marginTop="8dp"
      android:text="tvSetsCount"
      android:textColor="@color/white"
      android:textSize="32sp"
      app:layout_constraintLeft_toLeftOf="@+id/tvGroupName"
      app:layout_constraintTop_toBottomOf="@+id/tvGroupName"
      />
  <TextView
      android:id="@+id/textView11"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginBottom="8dp"
      android:layout_marginLeft="8dp"
      android:layout_marginRight="8dp"
      android:layout_marginTop="7dp"
      android:text="@string/sets"
      android:textColor="@color/text_color"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintLeft_toLeftOf="@+id/tvSetsCountInGroup"
      app:layout_constraintRight_toRightOf="@+id/tvSetsCountInGroup"
      app:layout_constraintTop_toBottomOf="@+id/tvSetsCountInGroup"
      />
  <TextView
      android:id="@+id/tvGroupTime"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginRight="1dp"
      android:text="tvGroupTime"
      android:textColor="@color/white"
      android:textSize="32sp"
      app:layout_constraintBaseline_toBaselineOf="@+id/tvSetsCountInGroup"
      app:layout_constraintRight_toRightOf="@+id/tvStartPracticsTime"
      />
  <TextView
      android:id="@+id/textView13"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginBottom="8dp"
      android:layout_marginRight="0dp"
      android:layout_marginTop="7dp"
      android:text="@string/all_time"
      android:textColor="@color/text_color"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintRight_toRightOf="@+id/tvGroupTime"
      app:layout_constraintTop_toBottomOf="@+id/tvGroupTime"
      />
</android.support.constraint.ConstraintLayout>