<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:circleview="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_gray"
    android:clickable="true"
    >
  <View
      android:id="@+id/view2"
      android:layout_width="0dp"
      android:layout_height="60dp"
      android:background="@color/colorAccent"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      />
  <TextView
      android:id="@+id/tvBack"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginBottom="8dp"
      android:layout_marginLeft="8dp"
      android:layout_marginStart="8dp"
      android:layout_marginTop="8dp"
      android:text="@string/back"
      android:textSize="18sp"
      app:layout_constraintBottom_toBottomOf="@+id/view2"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintTop_toTopOf="@+id/view2"
      />
  <TextView
      android:id="@+id/tvChange"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginEnd="8dp"
      android:layout_marginRight="8dp"
      android:text="@string/change"
      android:textSize="18sp"
      app:layout_constraintBottom_toBottomOf="@+id/view2"
      app:layout_constraintRight_toRightOf="@+id/view2"
      app:layout_constraintTop_toTopOf="@+id/view2"
      />
  <TextView
      android:id="@+id/textView3"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginEnd="8dp"
      android:layout_marginLeft="8dp"
      android:layout_marginRight="8dp"
      android:layout_marginStart="8dp"
      android:text="@string/holoshenie"
      android:textSize="18sp"
      app:layout_constraintBottom_toBottomOf="@+id/view2"
      app:layout_constraintLeft_toLeftOf="@+id/view2"
      app:layout_constraintRight_toRightOf="@+id/view2"
      app:layout_constraintTop_toTopOf="@+id/view2"
      app:layout_constraintVertical_bias="0.526"
      />
  <TextView
      android:id="@+id/tvPracticeToChangeName"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginEnd="8dp"
      android:layout_marginLeft="8dp"
      android:layout_marginRight="8dp"
      android:layout_marginStart="8dp"
      android:layout_marginTop="24dp"
      android:textColor="@color/white"
      android:textSize="18sp"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/view2"
      circleview:text="some text"
      />

  <com.github.lzyzsd.circleprogress.DonutProgress
      android:id="@+id/circle_view"
      android:layout_width="300dp"
      android:layout_height="300dp"
      android:layout_marginLeft="8dp"
      android:layout_marginRight="8dp"
      android:layout_marginTop="32dp"
      app:donut_finished_stroke_width="3dp"
      app:donut_show_text="false"
      app:donut_unfinished_stroke_width="3dp"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/tvPracticeToChangeName"
      />
  <TextView
      android:id="@+id/tvStartStop"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginBottom="8dp"
      android:layout_marginLeft="8dp"
      android:layout_marginRight="8dp"
      android:layout_marginTop="8dp"
      android:text="@string/start"
      android:textColor="@color/white"
      android:textSize="36sp"
      app:layout_constraintBottom_toBottomOf="@+id/circle_view"
      app:layout_constraintLeft_toLeftOf="@+id/circle_view"
      app:layout_constraintRight_toRightOf="@+id/circle_view"
      app:layout_constraintTop_toTopOf="@+id/circle_view"
      />
  <TextView
      android:id="@+id/tvPracticTime"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginBottom="8dp"
      android:layout_marginLeft="8dp"
      android:layout_marginRight="8dp"
      android:layout_marginTop="8dp"
      android:text="TextView"
      android:textSize="20sp"
      android:textColor="@color/white"
      app:layout_constraintBottom_toTopOf="@+id/tvStartStop"
      app:layout_constraintLeft_toLeftOf="@+id/circle_view"
      app:layout_constraintRight_toRightOf="@+id/circle_view"
      app:layout_constraintTop_toTopOf="@+id/circle_view"
      />
  <TextView
      android:id="@+id/tvDelayTime"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginBottom="8dp"
      android:layout_marginLeft="8dp"
      android:layout_marginRight="8dp"
      android:layout_marginTop="8dp"
      android:text="TextView"
      android:textSize="20sp"
      android:textColor="@color/white"
      app:layout_constraintBottom_toBottomOf="@+id/circle_view"
      app:layout_constraintLeft_toLeftOf="@+id/circle_view"
      app:layout_constraintRight_toRightOf="@+id/circle_view"
      app:layout_constraintTop_toBottomOf="@+id/tvStartStop"
      />

</android.support.constraint.ConstraintLayout>